k8s/kustomize/base/worker.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: sleepinglotus/complex-worker
        resources:
          limits:
            memory: "128Mi"
