k8s/kustomize/base/client.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: client
        image: sleepinglotus/complex-client
        resources:
          limits:
            memory: "128Mi"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
  - port: 3000
    targetPort: 3000
