k8s/kustomize/base/pg.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pg
  template:
    metadata:
      labels:
        app: pg
    spec:
      volumes:
        - name: pg-storage
          persistentVolumeClaim:
            claimName: db-pvc
      containers:
      - name: pg
        image: postgres
        resources:
          limits:
            memory: "128Mi"
        ports:
        - containerPort: 5432
        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: pg-storage
            subPath: postgres

---
apiVersion: v1
kind: Service
metadata:
  name: pg-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: pg
  ports:
  - port: 5432
    targetPort: 5432
